Update spreadsheet using kap expressions